--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,17 @@
 development:
   host: 127.0.0.1
-  database: atk14catalog_devel
-  username: atk14catalog_devel
-  password: catalog
+  database: atk14eshop_devel
+  username: atk14eshop_devel
+  password: eshop
 
 test:
   host: 127.0.0.1
-  database: atk14catalog_test
-  username: atk14catalog_test
-  password: catalog
+  database: atk14eshop_test
+  username: atk14eshop_test
+  password: eshop
 
 production:
   host: 127.0.0.1
-  database: atk14catalog_production
-  username: atk14catalog_production
+  database: atk14eshop_production
+  username: atk14eshop_production
   password: <?=sha1(SECRET_TOKEN."Very_Sophisticated_Production_Password_Hiding")?>
