--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -8,11 +8,11 @@
 #
 
 production:
-  url: "http://catalog.atk14.net/"
+  url: "http://eshop.atk14.net/"
   server: "cloudkicker.plovarna.cz"                                            # we are deploying on this server
   user: "devel"                                                                # we are deploying as this user
-  directory: "/home/{{user}}/apps/catalog.atk14.net/production/"               # in this directory is this application installed on the server
-  deploy_repository: "{{user}}@{{server}}:apps/catalog.atk14.net/repos/production.git" # this is the URL of deployment git repository with a proper post-receive hook
+  directory: "/home/{{user}}/apps/eshop.atk14.net/"                            # in this directory is this application installed on the server
+  deploy_repository: "{{user}}@{{server}}:repos/eshop.atk14.net.git"           # this is the URL of deployment git repository with a proper post-receive hook
   before_deploy:                                                               # some tasks may be run before deployment
   - "@local composer update"
   - "@local npm install"
