--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "yarri/my-blowfish": ">=1.3 <2.0",
         "yarri/full-text-search-query-like": "0.* >=0.1",
         "atk14/confirmation-field": "^1.0",
-        "atk14/sluggish-router": "^1.0"
+        "atk14/sluggish-router": "^1.0",
+        "atk14/country-field": "^1.0"
     }
 }
