--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "yarri/full-text-search-query-like": "0.* >=0.1",
         "atk14/confirmation-field": "^1.0",
         "atk14/sluggish-router": "^1.0",
-        "atk14/country-field": "^1.0"
+        "atk14/country-field": "^1.0",
+        "yarri/lazy-loader": "^1.2"
     }
 }
