--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "svg-country-flags": "^1.2.6",
     "bootstrap4-notify": "4.0.3",
     "popper.js": "^1.15.0",
-    "animate.css": "^3.7.2"
+    "animate.css": "^3.7.2",
+    "swiper": "^4.5.0",
+    "photoswipe": "^4.1.3"
   }
 }
