--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "atk14/textmit-client": "^1.2.1",
         "atk14/decimal-field": "^1.0",
         "atk14/localized-decimal-field": "^1.0",
-        "atk14/zip-field": "^0.1.0"
+        "atk14/zip-field": "^0.1.0",
+        "chrisjean/php-ico": "^1.0"
     }
 }
