Added RecaptchaField, it is displayed in the contact form only when constants RECAPTCHA_SITE_KEY and RECAPTCHA_SECRET_KEY are defined

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "atk14/localized-decimal-field": "^1.0",
         "atk14/zip-field": "^0.1.0",
         "chrisjean/php-ico": "^1.0",
-        "atk14/slug-field": "^1.1"
+        "atk14/slug-field": "^1.1",
+        "atk14/recaptcha-field": "^0.1.2"
     }
 }
