--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "popper.js": "^1.15.0",
     "animate.css": "^3.7.2",
     "swiper": "^5.2.1",
-    "photoswipe": "^4.1.3"
+    "photoswipe": "^4.1.3",
+    "cookieconsent": "^3.1.0",
+    "bootbox": "^5.3.4"
   }
 }
