--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "swiper": "^5.2.1",
     "photoswipe": "^4.1.3",
     "cookieconsent": "^3.1.0",
-    "bootbox": "^5.3.4"
+    "bootbox": "^5.3.4",
+    "moment": "^2.24.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0"
   }
 }
