--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "atk14/confirmation-field": "^1.0",
         "atk14/sluggish-router": "^1.1",
         "atk14/country-field": "^1.0",
-        "dragonbe/vies": "1.*",
+        "dragonbe/vies": "1.0.6",
         "yarri/lazy-loader": "^1.2",
         "html2text/html2text": "^4.0",
         "atk14/textmit-client": "^1.2.1",
