--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
-  - 7.4
+#  - 7.4 # stopping testing in PHP7.4 - gd extension is not installed
 
 before_install:
   - echo 'en_US.UTF-8 UTF-8' | sudo tee --append /var/lib/locales/supported.d/local
