--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -9,3 +9,27 @@ test:
   price_to_pay: 1000
   phone: +420.605111222
   delivery_phone: +420.605333444
+
+test_cash_on_delivery:
+  region_id: "<?=$regions["czechoslovakia"]->getId()?>"
+  delivery_method_id: "<?=$delivery_methods["personal"]->getId()?>"
+  delivery_fee: 0
+  delivery_fee_incl_vat: 0
+  payment_method_id: "<?=$payment_methods["cash_on_delivery"]->getId()?>"
+  payment_fee: 75.238
+  payment_fee_incl_vat: 79.0
+  price_to_pay: 1000
+  phone: +420.605111222
+  delivery_phone: +420.605333444
+
+test_bank_transfer:
+  region_id: "<?=$regions["czechoslovakia"]->getId()?>"
+  delivery_method_id: "<?=$delivery_methods["dpd"]->getId()?>"
+  delivery_fee: 0
+  delivery_fee_incl_vat: 0
+  payment_method_id: "<?=$payment_methods["bank_transfer"]->getId()?>"
+  payment_fee: 75.238
+  payment_fee_incl_vat: 79.0
+  price_to_pay: 1000
+  phone: +420.605111222
+  delivery_phone: +420.605333444
