[Digital products] Added product tags, so just one variant can be digital_product on a card

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -21,3 +21,7 @@ green_tea:
 peanuts:
   catalog_id: PEANUTS
   card_id: "<?php echo $cards["peanuts"]->getId() ?>"
+
+book:
+  catalog_id: "BOOK"
+  card_id: "<?php echo $cards["book"]->getId(); ?>"
