--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "atk14/recaptcha-field": "^0.1.2",
         "yarri/markdown-manual.mdbook": "^0.2.1",
         "atk14/vlnka": "^1.1",
-        "atk14/company-number-field": "^0.1"
+        "atk14/company-number-field": "^0.1",
+        "aristath/ari-color": "dev-master"
     }
 }
