[pickup_points] url for pickup points download is defined in parsing class.

--- a/test/fixtures/delivery_methods.yml
+++ b/test/fixtures/delivery_methods.yml
@@ -24,3 +24,9 @@ post_cod:
   price: 120
   price_incl_vat: 120
 
+zasilkovna:
+  code: "zasilkovna"
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true]) ?>"
+  price: 70
+  price_incl_vat: 70
+  delivery_service_id: "<?= $delivery_services["zasilkovna"]->getId() ?>"
