Package aristath/ari-color installed in version 1.1.1

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
         "yarri/markdown-manual.mdbook": "^0.2.1",
         "atk14/vlnka": "^1.1",
         "atk14/company-number-field": "^0.1",
-        "aristath/ari-color": "dev-master"
+        "aristath/ari-color": "^1.1.1"
     }
 }
