--- a/test/fixtures/cards.yml
+++ b/test/fixtures/cards.yml
@@ -9,6 +9,11 @@ tea:
   has_variants: true
   product_type_id: "<?= $product_types["drink"]->getId() ?>"
 
+apple_cider:
+  name_en: Apple Cider
+  name_cs: Jablečný cider
+  product_type_id: "<?= $product_types["drink"]->getId() ?>"
+
 peanuts:
   name_en: Peanuts
   name_cs: Arašídy
