--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "mysutka/product_feed_generator": "^0.1.7",
         "sunfoxcz/spayd-php": "^1.0",
         "bacon/bacon-qr-code": "^1.0",
-        "atk14/csv-reader": "dev-master",
-        "atk14/csv-writer": "dev-master"
+        "atk14/csv-reader": "^1.1",
+        "atk14/csv-writer": "^1.0"
     }
 }
