--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "bootbox": "^5.3.4",
     "moment": "^2.24.0",
     "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^0.7.0"
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "gulp-mjml": "^4.0.2"
   }
 }
