--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "sunfoxcz/spayd-php": "^1.0",
         "bacon/bacon-qr-code": "^1.0",
         "atk14/csv-reader": "^1.1",
-        "atk14/csv-writer": "^1.0"
+        "atk14/csv-writer": "^1.0",
+        "yarri/keywords-highlighter": "^0.1.1"
     }
 }
