--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+		"commonjs": true,
+		"jquery": true
   },
   "globals": {},
   "rules": {
