--- a/package.json
+++ b/package.json
@@ -30,14 +30,20 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
     "ace-builds": "^1.4.6",
+    "animate.css": "^3.7.2",
     "atk14js": "^1.2.1",
     "blueimp-file-upload": "^9.34.0",
+    "bootbox": "^5.5.2",
     "bootstrap": "4.5.3",
     "bootstrap-markdown-editor-4": "^3.0.0",
+    "bootstrap4-notify": "4.0.3",
     "browser-sync": "^2.26.7",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "cookieconsent": "^3.1.0",
     "del": "^2.0.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-cssnano": "^2.1.0",
@@ -53,19 +59,13 @@
     "jquery": "~3.4.1",
     "jquery-ui-bundle": "^1.11.2",
     "jshint-stylish": "^2.0.1",
-    "node-sass": "^4.12.0",
-    "respond.js": "^1.4.2",
-    "unobfuscatejs": "^1.0.0",
-    "svg-country-flags": "^1.2.6",
-    "bootstrap4-notify": "4.0.3",
-    "popper.js": "^1.15.0",
-    "animate.css": "^3.7.2",
-    "swiper": "^5.4.5",
-    "photoswipe": "^4.1.3",
-    "cookieconsent": "^3.1.0",
-    "bootbox": "^5.3.4",
     "moment": "^2.24.0",
-    "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^0.7.0"
+    "node-sass": "^4.12.0",
+    "photoswipe": "^4.1.3",
+    "popper.js": "^1.15.0",
+    "respond.js": "^1.4.2",
+    "svg-country-flags": "^1.2.6",
+    "swiper": "^5.4.5",
+    "unobfuscatejs": "^1.0.0"
   }
 }
