A warehouse or warehouses can be passed to Product::getStockcount()

--- a/test/fixtures/warehouse_items.yml
+++ b/test/fixtures/warehouse_items.yml
@@ -13,7 +13,17 @@ mint_tea:
   warehouse_id: 1
   stockcount: 22
 
+external__mint_tea:
+  product_id: "<?= $products["mint_tea"]->getId() ?>"
+  warehouse_id: "<?= $warehouses["external"]->getId() ?>"
+  stockcount: 11
+
 herbal_tea:
   product_id: "<?= $products["herbal_tea"]->getId() ?>"
   warehouse_id: 1
   stockcount: 0
+
+on_the_way__herbal_tea:
+  product_id: "<?= $products["herbal_tea"]->getId() ?>"
+  warehouse_id: "<?= $warehouses["on_the_way"]->getId() ?>"
+  stockcount: 10
