--- a/test/fixtures/delivery_methods.yml
+++ b/test/fixtures/delivery_methods.yml
@@ -1,32 +1,32 @@
 dpd:
   code: "dpd_test"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
-  price: 100
   price_incl_vat: 121
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
 
 personal:
   code: "personal_test"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
-  price: 0
   price_incl_vat: 0
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
   personal_pickup: true
   personal_pickup_on_store_id: "<?= $stores["test"]->getId() ?>"
 
 post:
   code: "post_test"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
-  price: 90
   price_incl_vat: 190
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
 
 post_cod:
   code: "post_cod_test"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
-  price: 120
   price_incl_vat: 120
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
 
 zasilkovna:
   code: "zasilkovna"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
-  price: 70
   price_incl_vat: 70
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
   delivery_service_id: "<?= $delivery_services["zasilkovna"]->getId() ?>"
