--- a/test/fixtures/delivery_methods.yml
+++ b/test/fixtures/delivery_methods.yml
@@ -26,6 +26,8 @@ post_cod:
 
 zasilkovna:
   code: "zasilkovna"
+  label_en: "Packeta"
+  label_cs: "Zásilkovna"
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
   price_incl_vat: 70
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
