--- a/test/fixtures/payment_methods.yml
+++ b/test/fixtures/payment_methods.yml
@@ -16,5 +16,5 @@ cash_on_delivery:
   code: "cod",
   regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
   price_incl_vat: 79.0
-  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
+  vat_rate_id: "<?= $vat_rates["five"]->getId() ?>"
   cash_on_delivery: true
