--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -1,5 +1,5 @@
 registration_discount:
-  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   name_en: "7% discount over 1000 CZK for registration"
   name_cs: "Sleva 7% nad 1000 Kč za registraci"
   user_registration_required: true
@@ -7,7 +7,7 @@ registration_discount:
   discount_percent: 7.0
 
 free_shipping:
-  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   name_en: "Free shipping"
   name_cs: "Doprava zdarma"
   user_registration_required: false
