--- a/test/fixtures/vouchers.yml
+++ b/test/fixtures/vouchers.yml
@@ -1,42 +1,57 @@
 free_shipping:
-  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: FREE-SHIPPING
   free_shipping: true
 
 percentage_discount:
-  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: PERCENTAGE-DISCOUNT
   discount_percent: 2
 
 amount_discount:
-  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: AMOUNT-DISCOUNT
   discount_percent: 0
   discount_amount: 5
 
 free_voucher:
-  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: PROMO
   discount_percent: 0
   discount_amount: 0
   free_shipping: false
 
 discount_10:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: DISCOUNT_10
   discount_percent: 10
 
 discount_15:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: DISCOUNT_15
   discount_percent: 15
 
 gift_coupon_200:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: GIFT_COUPON_200
   discount_amount: 200
   gift_voucher: true
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
 
 gift_coupon_500:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
   voucher_code: GIFT_COUPON_500
   discount_amount: 500
   gift_voucher: true
   vat_rate_id: "<?= $vat_rates["ten"]->getId() ?>"
+
+supervanoce:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
+  voucher_code: SUPERVANOCE
+  discount_amount: 500
+
+supervelikonoce:
+  regions: "<?= json_encode([$regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
+  voucher_code: SUPERVELIKONOCE
+  discount_amount: 130
+
