--- a/test/fixtures/delivery_methods.yml
+++ b/test/fixtures/delivery_methods.yml
@@ -32,3 +32,11 @@ zasilkovna:
   price_incl_vat: 70
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
   delivery_service_id: "<?= $delivery_services["zasilkovna"]->getId() ?>"
+
+by_agreement:
+  code: "by_agreement"
+  label_en: "Delivery by agreement"
+  label_cs: "Doručení dohodou"
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
+  price_incl_vat: NULL
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
