--- a/test/fixtures/category_cards.yml
+++ b/test/fixtures/category_cards.yml
@@ -1,23 +1,43 @@
-tea__color_green:
+color_green__tea:
   category_id: "<?= $categories["color_green"]->getId() ?>"
   card_id: "<?= $cards["tea"]->getId() ?>"
 
-tea__food_drinks:
-   category_id: "<?= $categories["food_drinks"]->getId() ?>"
+food_drinks__tea:
+  category_id: "<?= $categories["food_drinks"]->getId() ?>"
+  card_id: "<?= $cards["tea"]->getId() ?>"
+  rank: 1000
+
+food_drinks__tea:
+  category_id: "<?= $categories["food_drinks"]->getId() ?>"
+  card_id: "<?= $cards["apple_cider"]->getId() ?>"
+  rank: 1001
+
+hot_drinks__coffee:
+  category_id: "<?= $categories["hot_drinks"]->getId() ?>"
+  card_id: "<?= $cards["coffee"]->getId() ?>"
+  rank: 1
+
+hot_drinks__tea:
+  category_id: "<?= $categories["hot_drinks"]->getId() ?>"
+  card_id: "<?= $cards["tea"]->getId() ?>"
+  rank: 2
+
+coffeine_drinks__coffe:
+   id: 1112
+   category_id: "<?= $categories["coffeine_drinks"]->getId() ?>"
+   card_id: "<?= $cards["coffee"]->getId() ?>"
+   rank: 999
+
+coffeine_drinks__tea:
+   id: 1111
+   category_id: "<?= $categories["coffeine_drinks"]->getId() ?>"
    card_id: "<?= $cards["tea"]->getId() ?>"
+   rank: 999
 
-tea__hot_drinks:
-   category_id: "<?= $categories["hot_drinks"]->getId() ?>" 
-   card_id: "<?= $cards["tea"]->getId() ?>" 
+cold_drinks__cider:
+   category_id: "<?= $categories["cold_drinks"]->getId() ?>"
+   card_id: "<?= $cards["apple_cider"]->getId() ?>"
 
-tea_coffeine__drinks:
-   category_id: "<?= $categories["coffeine_drinks"]->getId() ?>" 
-   card_id: "<?= $cards["tea"]->getId() ?>" 
-
-cider__cold_drinks:
-   category_id: "<?= $categories["cold_drinks"]->getId() ?>" 
-   card_id: "<?= $cards["apple_cider"]->getId() ?>" 
-
-shoe__mens_shoes:
-   category_id: "<?= $categories["mens_shoes"]->getId() ?>" 
-   card_id: "<?= $cards["shoe"]->getId() ?>" 
+mens_shoes__shoe:
+   category_id: "<?= $categories["mens_shoes"]->getId() ?>"
+   card_id: "<?= $cards["shoe"]->getId() ?>"
