--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -33,3 +33,15 @@ test_bank_transfer:
   price_to_pay: 1000
   phone: +420.605111222
   delivery_phone: +420.605333444
+
+test_credit_card:
+  region_id: "<?=$regions["czechoslovakia"]->getId()?>"
+  delivery_method_id: "<?=$delivery_methods["dpd"]->getId()?>"
+  delivery_fee_incl_vat: 99.0
+  delivery_fee_vat_percent: 21.0
+  payment_method_id: "<?=$payment_methods["credit_card"]->getId()?>"
+  payment_fee_incl_vat: 0.0
+  payment_fee_vat_percent: 21.0
+  price_to_pay: 1000
+  phone: +420.605111222
+  delivery_phone: +420.605333444
