--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "bootstrap-markdown-editor-4": "https://github.com/yarri/bootstrap-markdown-editor.git#1566a6b",
     "bootstrap4-notify": "4.0.3",
     "browser-sync": "^2.26.7",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "cookieconsent": "^3.1.0",
     "del": "^2.0.2",
     "favicons": "^6.0.0",
@@ -55,8 +57,6 @@
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^1.5.3",
     "html5shiv": "^3.7.0",
-    "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^0.7.0",
     "jquery": "~3.4.1",
     "jquery-ui-bundle": "^1.11.2",
     "jshint-stylish": "^2.0.1",
@@ -65,8 +65,8 @@
     "photoswipe": "^4.1.3",
     "popper.js": "^1.15.0",
     "respond.js": "^1.4.2",
-    "unobfuscatejs": "^1.0.2",
     "svg-country-flags": "^1.2.6",
-    "swiper": "^6.5.0"
+    "swiper": "^6.5.0",
+    "unobfuscatejs": "^1.0.2"
   }
 }
