Helper display_stockcount improved - "On order" is displayed when a product is no on stock but it can be ordered

--- a/test/fixtures/warehouse_items.yml
+++ b/test/fixtures/warehouse_items.yml
@@ -42,3 +42,8 @@ kostkovana_latka:
   product_id: "<?= $products["kostkovana_latka"]->getId() ?>"
   warehouse_id: 1
   stockcount: 202
+
+jehla:
+  product_id: "<?= $products["jehla"]->getId() ?>"
+  warehouse_id: 1
+  stockcount: -23
