--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -108,6 +108,7 @@ jehla:
   card_id: "<?=$cards["jehla"]->getId() ?>"
   catalog_id: "jehla"
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
+  consider_stockcount: false
 
 latka_s_mnozstevnima_slevama:
   card_id: "<?=$cards["latka_s_mnozstevnima_slevama"]->getId() ?>"
