Campaigns selection can be effectively controlled by tags

--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -7,9 +7,17 @@ registration_discount:
   discount_percent: 7.0
 
 free_shipping:
-  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true]) ?>"
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true, $regions["SK"]->getCode() => true]) ?>"
   name_en: "Free shipping"
   name_cs: "Doprava zdarma"
   required_customer_group_id: NULL
   minimal_items_price_incl_vat: 2000
+  free_shipping: true
+
+free_shipping_for_oversized_products:
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["CR"]->getCode() => true, $regions["SK"]->getCode() => true]) ?>"
+  name_en: "Free shipping for oversized products"
+  name_cs: "Doprava zdarma pro nadrozměrné produkty"
+  required_customer_group_id: NULL
+  minimal_items_price_incl_vat: 20000
   free_shipping: true
