--- a/test/fixtures/delivery_methods.yml
+++ b/test/fixtures/delivery_methods.yml
@@ -2,7 +2,7 @@ dpd:
   code: "dpd_test"
   label_en: "DPD"
   label_cs: "DPD"
-  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true]) ?>"
+  regions: "<?= json_encode(["DEFAULT" => true, $regions["czechoslovakia"]->getCode() => true, $regions["SK"]->getCode() => true]) ?>"
   price_incl_vat: 121
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
 
