--- a/test/fixtures/delivery_addresses.yml
+++ b/test/fixtures/delivery_addresses.yml
@@ -6,6 +6,7 @@ kveta_doma:
   address_city: "Praha 3",
   address_zip: "130 00"
   address_country: "CZ"
+  phone: "+420.605123456"
   last_used_at: "2017-11-06 08:00:00"
   created_at: "2017-09-01 14:00:00"
 
@@ -18,6 +19,7 @@ kveta_prace:
   address_city: "Praha 3",
   address_zip: "130 00"
   address_country: "CZ"
+  phone: "+420.603111333"
   address_note: "Jsem tam jenom dopoledne!"
 #  last_used_at: null
   created_at: "2017-11-06 12:00:00"
