--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,6 +4,12 @@ rambo:
   lastname: "Rambo"
   password: "secret"
   email: "john@rambo.com"
+  gender_id: 1
+  address_street: Street
+  address_city: City
+  address_zip: 11122
+  address_country: CZ
+  phone: "+420606123456"
 
 rambo_tester:
   login: "rambo.tester"
@@ -25,6 +31,12 @@ john_doe:
   lastname: "Doe"
   password: "Samantha111"
   email: "john@doe.com"
+  gender_id: 1
+  address_street: Street
+  address_city: City
+  address_zip: 11122
+  address_country: CZ
+  phone: "+420606123456"
 
 samantha_doe:
   login: "samantha@doe.com"
@@ -32,6 +44,12 @@ samantha_doe:
   lastname: "Doe"
   password: "John123"
   email: "samantha@doe.com"
+  gender_id: 2
+  address_street: Street
+  address_city: City
+  address_zip: 11122
+  address_country: CZ
+  phone: "+420606123456"
 
 inactive_user:
   login: "inactive.user"
