In TechnicalSpecification, added auto-parsing of content to content_json

--- a/test/fixtures/technical_specification_keys.yml
+++ b/test/fixtures/technical_specification_keys.yml
@@ -17,11 +17,13 @@ width:
 height:
   key: height
   key_localized_en: Height
+  technical_specification_key_type_id: "<?= TechnicalSpecificationKeyType::GetInstanceByCode("integer")->getId() ?>"
   key_localized_cs: Výška
 
 weight:
   key: weight
   key_localized_en: Weight
+  technical_specification_key_type_id: "<?= TechnicalSpecificationKeyType::GetInstanceByCode("integer")->getId() ?>"
   key_localized_cs: Hmotnost
 
 decaffeinated:
