Displaying prices exclude VAT & refactoring & polishing

--- a/test/fixtures/pricelist_items.yml
+++ b/test/fixtures/pricelist_items.yml
@@ -124,3 +124,8 @@ fridge:
   pricelist_id: 1
   product_id: "<?= $products["fridge"]->getId() ?>"
   price: "11999"
+
+book:
+  pricelist_id: 1
+  product_id: "<?= $products["book"]->getId() ?>"
+  price: 279
