--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jshint-stylish": "^2.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4.12.0",
+    "nouislider": "^15.5.1",
     "photoswipe": "^4.1.3",
     "popper.js": "^1.15.0",
     "respond.js": "^1.4.2",
