--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "ace-builds": "^1.4.6",
     "animate.css": "^3.7.2",
     "atk14js": "^1.2.1",
+    "@babel/preset-env": "^7.17.10",
+    "babelify": "^10.0.0",
     "blueimp-file-upload": "^9.34.0",
     "bootbox": "^5.3.4",
     "bootstrap": "4.6.0",
     "bootstrap-markdown-editor-4": "https://github.com/yarri/bootstrap-markdown-editor.git#1566a6b",
     "browser-sync": "^2.27.9",
+    "browserify": "^17.0.0",
     "bootstrap4-notify": "4.0.3",
     "chart.js": "^3.6.0",
     "chartjs-adapter-moment": "^1.0.0",
@@ -45,6 +48,7 @@
     "favicons": "^6.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-cssnano": "^2.1.0",
@@ -63,11 +67,13 @@
     "moment": "^2.29.1",
     "node-sass": "^4.12.0",
     "nouislider": "^15.5.1",
-    "photoswipe": "^4.1.3",
+    "photoswipe": "^5.2.4",
     "popper.js": "^1.15.0",
     "respond.js": "^1.4.2",
     "svg-country-flags": "^1.2.6",
     "swiper": "^8.1.4",
-    "unobfuscatejs": "^1.0.2"
+    "unobfuscatejs": "^1.0.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
