--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ace-builds": "^1.4.6",
     "animate.css": "^3.7.2",
     "atk14js": "^1.2.1",
+    "babel-eslint": "^10.1.0",
     "blueimp-file-upload": "^9.34.0",
     "bootbox": "^5.3.4",
     "bootstrap": "4.6.0",
@@ -45,6 +46,7 @@
     "favicons": "^6.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-cssnano": "^2.1.0",
