--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "atk14/sluggish-router": "^1.1",
         "atk14/country-field": "^1.0",
         "dragonbe/vies": "1.0.6",
-        "yarri/lazy-loader": "^1.2",
+        "yarri/lazy-loader": "^1.2|^2.0",
         "html2text/html2text": "^4.0",
         "atk14/textmit-client": "dev-master",
         "atk14/decimal-field": "^1.0",
