--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "respond.js": "^1.4.2",
     "svg-country-flags": "^1.2.6",
     "swiper": "^8.1.4",
-    "unobfuscatejs": "^1.0.2"
+    "unobfuscatejs": "^1.0.2",
+    "@babel/core": "^7.17.12"
   }
 }
