--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -124,3 +124,8 @@ strih_v_pdf_formatu:
 fridge:
   card_id: "<?= $cards["fridge"]->getId() ?>"
   catalog_id: "fridge"
+
+fidorka:
+  card_id: "<?= $cards["fidorka"]->getId() ?>"
+  catalog_id: "FIDORKA_GIFT"
+  vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
