--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "atk14/csv-writer": "^1.1",
         "atk14/sql-builder": "^3.0.2",
         "atk14/category-filter": "^1.0",
-        "atk14/cookie-consent": "dev-master"
+        "atk14/cookie-consent": "dev-master",
+        "tijsverkoyen/css-to-inline-styles": "^2.2"
     }
 }
