--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "ace-builds": "^1.4.6",
     "atk14js": "^1.2.1",
     "babel-eslint": "^10.1.0",
@@ -53,7 +54,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "3.1.0",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.4.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "html5shiv": "^3.7.0",
     "jquery": "~3.4.1",
@@ -64,6 +65,7 @@
     "nouislider": "^15.5.1",
     "photoswipe": "^5.2.4",
     "respond.js": "^1.4.2",
+    "rollup": "^2.76.0",
     "svg-country-flags": "^1.2.6",
     "bootstrap4-notify": "4.0.3",
     "popper.js": "^1.15.0",
