--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "bacon/bacon-qr-code": "^1.0",
         "atk14/csv-reader": "^1.1",
         "atk14/csv-writer": "^1.1",
-        "atk14/sql-builder": "^3.0.2",
+        "atk14/sql-builder": "^3.2|^4.1",
         "atk14/category-filter": "^1.0",
         "atk14/cookie-consent": "dev-master",
         "mysutka/datalayer_generator": "^0.9"
